docs(security): first audit — STRIDE threat model and risk register
Context: `/eados audit`, the continuous-audit phase. Entry gates for
scaffold -> audit (consistency-lint, self-review) were both green on merged main
at 19c2de2, and that transition is the one edge with human_gate: false, so it is
recorded here without owner confirmation — correctly, not by omission.

Risk score on the audited change (PR #9, 46 files / 2942 lines):

  risk: critical  (factors: security-surface, large-change, wide-blast-radius)
  security-auditor gate: REQUIRED [domain=software]

So the STRIDE pass was mandatory, not optional. Worth stating plainly: a first
scaffold will ALWAYS score critical, because any change touching .github/**,
tools/** or SECURITY.md scores security_surface: 3 and a render touches all
three. That is the scorer working as designed. The right response is to run the
deep audit rather than explain the number away — and doing so surfaced two live
findings that have nothing to do with the render's size.

Change:
  * docs/security/threat-model.md — 6 trust boundaries x 6 STRIDE categories,
    every cell carrying a threat, a mitigation, or an explicit n/a with a reason.
    A library's boundaries are not a service's: no listener, no tenancy, no
    session. The surface is what a consumer hands in (B1), what goes back out
    through the Spring adapter (B2), external services incl. the JWKS fetch (B3),
    key material via the KeyProvider SPI (B4), the build/supply chain (B5), and
    test-scope reachability from production (B6). Multi-tenancy, sessions, TLS
    termination and authorization policy are marked out of scope WITH reasons.
  * docs/security/risk-register.md — the scored outcome, 6 findings, plus the
    positive controls verified rather than assumed, plus what was NOT found.
  * links.yaml — derived from merged PRs by derive_links.py (step 1 input).
  * orchestrator/project.yaml — the scaffold -> audit checkpoint, phase: audit,
    manifest_rev 3 -> 4, and